--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "target": "heartfulnesstestingapp",
-    "public": "out",
+    "public": "public",
     "rewrites": [
       {
         "source": "**",
@@ -12,7 +12,7 @@
   },
   "functions": {
     "source": ".",
-    "ignore": ["firebase.json", "node_modules", "**/out"],
+    "ignore": ["firebase.json", "node_modules", "**/public"],
     "runtime": "nodejs12"
   }
 }
