--- a/.github/workflows/qa-deploy.yml
+++ b/.github/workflows/qa-deploy.yml
@@ -1,9 +1,9 @@
 name: staging_deployment
 on:
   push:
-    branches: [ "development" ]
+    branches: [ "staging" ]
   pull_request:
-    branches: [ "development" ]
+    branches: [ "staging" ]
   repository_dispatch:
     types: staging_deployment
 jobs:
