--- a/.github/workflows/qa-deploy.yml
+++ b/.github/workflows/qa-deploy.yml
@@ -1,8 +1,14 @@
 name: staging_deployment
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "development" ]
+    
   repository_dispatch:
-    types:
-      - staging_deployment
+    types: staging_deployment
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 jobs:
   qabuild:
     runs-on: ubuntu-latest
