--- a/.github/workflows/qa-deploy.yml
+++ b/.github/workflows/qa-deploy.yml
@@ -4,8 +4,17 @@ on:
   push:
     branches: [ "development" ]
     
-  repository_dispatch:
-    types: staging_deployment
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Person to greet'
+        required: true
+        default: 'Mona the Octocat'
+      home:
+        description: 'location'
+        required: false
+        default: 'The Octoverse'
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
