--- a/.github/workflows/qa-deploy.yml
+++ b/.github/workflows/qa-deploy.yml
@@ -1,10 +1,9 @@
 name: staging_deployment
 on:
   push:
-    branches:
-      - development
+    branches: [development]
   repository_dispatch:
-    types: staging_deployment
+    types: [staging_deployment]
 jobs:
   qabuild:
     runs-on: ubuntu-latest
