--- a/.github/workflows/qa-deploy.yml
+++ b/.github/workflows/qa-deploy.yml
@@ -1,22 +1,8 @@
-# This is a basic workflow to help you get started with Actions
-
-name: staging_deployment
-
-# Controls when the workflow will run
+name: Deploy Cloud Functions
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "development" ]
-  pull_request:
-    branches: [ "development" ]
-    
-  repository_dispatch:
-    types: staging_deployment
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    branches:
+      - development
 jobs:
   qabuild:
     runs-on: ubuntu-latest
