--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,18 @@
 {
   "hosting": {
     "target": "heartfulnesstestingapp",
-    "public": "out",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "public": "build",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
+    "cleanUrls": true
+  },
+  "functions": {
+    "source": ".",
+    "ignore": ["firebase.json", "node_modules", "**/public"],
+    "runtime": "nodejs12"
   }
 }
