--- a/firebase.json
+++ b/firebase.json
@@ -1,18 +1,13 @@
 {
   "hosting": {
-    "target": "heartfulnesstestingapp",
-    "public": "build",
+    "public": "out",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "cleanUrls": true,
     "rewrites": [
       {
-        "source": "**",
-        "destination": "/index.html"
+        "source": "/**", 
+        "dynamicLinks": true
       }
-    ],
-    "cleanUrls": true
-  },
-  "functions": {
-    "source": ".",
-    "ignore": ["firebase.json", "node_modules", "**/public"],
-    "runtime": "nodejs12"
+    ]
   }
 }
